# otsdaq-utilities

./: .clang-format  .clang-format-hpp  .git_whitespace_exclude  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: auto_approve.yml  git-whitespace.yml  otsdaq-build-single-pkg.yml  otsdaq-develop-cpp-ci.yml  otsdaq-format-single-pkg.yml  otsdaq-test-single-pkg.yml  otsdaq-tidy-single-pkg.yml  track_new_issues.yml  track_new_prs.yml
WebGUI/JSONFiles/: tree-data.json
WebGUI/css/: CodeEditor.css  ConfigurationAPI.css  ConfigurationGUI.css  ConfigurationGUI_artdaq.css  ConsoleTabs.css  Desktop.css  DqmGUI.css  FEStructure.css  FEStructure_template.css  (+15 more)
doc/: CMakeLists.txt
onlineDoc/: doxygen_index.html  doxygen_main_editor.cpp  index.html  inject_otsdaq.html  inject_otsdaq_demo.html  inject_otsdaq_fermilabtestbeam.html  inject_otsdaq_head.html  inject_otsdaq_utilities.html  otsdaq_doc_library.js
otsdaq-utilities/: CMakeLists.txt  checkinAll.sh
otsdaq-utilities/ECLWriter/: CMakeLists.txt  ECL.cxx  ECL.hxx  ECLConnection.cpp  ECLConnection.h  ECLSupervisor.cc  ECLSupervisor.h  ECLTest.cc
test/: CMakeLists.txt  ots_mm_udp_interface.cpp  ots_mm_udp_interface.h  ots_mm_udp_test.cpp
tools/: AddNewFirmware.py  AddNewFrontEndInterface.py  AddNewHardware.py  AddNewInterface.py  CMakeLists.txt  CopyInterface.py  EclipseBuild.sh  EclipseReadme.txt  OnlineDocPushUpdate.sh  ProductsUpdate.py  README  SendSlackChat.py  UpdateOTS.sh  argparse.py  build_otsdaq.sh  change_ots_qualifiers.sh  check_whitespace.sh  convert_comments_to_doxygen.cpp  convert_header_comments_to_doxygen.sh  create_tutorial_zips.sh  create_user_snapshot.sh  displayVersionsAndQualifiers.sh  ecl_post.sh  get-ext.sh  ots-slack.py  ots_add_qualifiers_to_repo_product_deps.sh  ots_change_name_for_new_repo.sh  ots_check_whitespace.sh  ots_create_repo_from_demo.sh  ots_get_and_fix_repo.sh  ots_git_format_apply.sh  ots_setup_slack.sh  ots_table_download_csv.cc  ots_table_upload_csv.cc  ots_whitespace_cleanup.sh  quick_ots_install.sh  standalone_code_editor_install.sh
(+351 files in other folders)
